@@ -1,21 +1,21 @@
 package edu.uw.zookeeper.client;
 
-import java.util.List;
 import java.util.concurrent.ExecutionException;
 
 import org.apache.zookeeper.KeeperException;
 
 import com.google.common.base.Optional;
-import com.google.common.collect.Lists;
 import com.google.common.util.concurrent.ForwardingListenableFuture;
 import com.google.common.util.concurrent.Futures;
 import com.google.common.util.concurrent.ListenableFuture;
 import com.google.common.util.concurrent.MoreExecutors;
 
 import edu.uw.zookeeper.common.Automaton;
+import edu.uw.zookeeper.common.FutureChain;
 import edu.uw.zookeeper.common.ChainedFutures;
-import edu.uw.zookeeper.common.ChainedFutures.ChainedProcessor;
 import edu.uw.zookeeper.common.Promise;
+import edu.uw.zookeeper.common.SettableFuturePromise;
+import edu.uw.zookeeper.common.ToStringListenableFuture.SimpleToStringListenableFuture;
 import edu.uw.zookeeper.net.Connection;
 import edu.uw.zookeeper.protocol.FourLetterRequest;
 import edu.uw.zookeeper.protocol.FourLetterResponse;
@@ -25,26 +25,24 @@ import edu.uw.zookeeper.protocol.Message;
 /**
  * Assumes that the server response is a single packet.
  */
-public class FourLetterCommand extends ForwardingListenableFuture<String> implements ChainedProcessor<ListenableFuture<?>>, Connection.Listener<Message.ServerAnonymous>, Runnable {
+public class FourLetterCommand extends ForwardingListenableFuture<String> implements ChainedFutures.ChainedProcessor<ListenableFuture<?>, FutureChain<ListenableFuture<?>>>, Connection.Listener<Message.ServerAnonymous>, Runnable {
 
     public static ListenableFuture<String> call(
             FourLetterWord word,
-            ListenableFuture<? extends Connection<? super Message.ClientAnonymous,? extends Message.ServerAnonymous,?>> connection,
-            Promise<String> response) {
+            ListenableFuture<? extends Connection<? super Message.ClientAnonymous,? extends Message.ServerAnonymous,?>> connection) {
+        final Promise<String> promise = SettableFuturePromise.create();
         return ChainedFutures.run(
-                ChainedFutures.process(
-                    ChainedFutures.chain(
-                            new FourLetterCommand(word, connection, response),
-                            Lists.<ListenableFuture<?>>newArrayListWithCapacity(3)),
-                    ChainedFutures.<String>castLast()),
-                response);
+                ChainedFutures.<String>castLast(
+                        ChainedFutures.arrayList(
+                                new FourLetterCommand(word, connection, promise),
+                                3)),
+                promise);
     }
     
     public static ListenableFuture<String> callThenClose(
             final FourLetterWord word,
-            final ListenableFuture<? extends Connection<? super Message.ClientAnonymous,? extends Message.ServerAnonymous,?>> connection,
-            final Promise<String> response) {
-        ListenableFuture<String> future = call(word, connection, response);
+            final ListenableFuture<? extends Connection<? super Message.ClientAnonymous,? extends Message.ServerAnonymous,?>> connection) {
+        ListenableFuture<String> future = call(word, connection);
         future.addListener(
                 CloseConnection.create(connection), 
                 MoreExecutors.directExecutor());
@@ -67,11 +65,11 @@ public class FourLetterCommand extends ForwardingListenableFuture<String> implem
     
     @Override
     public Optional<? extends ListenableFuture<?>> apply(
-            List<ListenableFuture<?>> input) throws Exception {
+            FutureChain<ListenableFuture<?>> input) throws Exception {
         if (input.isEmpty()) {
             return Optional.of(connection);
         }
-        ListenableFuture<?> last = input.get(input.size()-1);
+        ListenableFuture<?> last = input.getLast();
         if (last == connection) {
             Connection<? super Message.ClientAnonymous,? extends Message.ServerAnonymous,?> connection;
             try {
@@ -142,16 +140,14 @@ public class FourLetterCommand extends ForwardingListenableFuture<String> implem
         return response;
     }
     
-    public static class CloseConnection<T extends Connection<?,?,?>> extends ForwardingListenableFuture<T> implements Runnable {
+    public static class CloseConnection<T extends Connection<?,?,?>> extends SimpleToStringListenableFuture<T> implements Runnable {
 
         public static <T extends Connection<?,?,?>> CloseConnection<T> create(ListenableFuture<T> future) {
             return new CloseConnection<T>(future);
         }
         
-        protected final ListenableFuture<T> future;
-        
         protected CloseConnection(ListenableFuture<T> future) {
-            this.future = future;
+            super(future);
         }
         
         @Override
@@ -165,11 +161,6 @@ public class FourLetterCommand extends ForwardingListenableFuture<String> implem
                 } catch (ExecutionException e) {
                 }
             }
-        }
-
-        @Override
-        protected ListenableFuture<T> delegate() {
-            return future;
         }
     }
 }
